[gd_scene load_steps=12 format=3]

[ext_resource type="Script" path="res://scripts/hub/hub.gd" id="1_hub"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(50, 1, 50)

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(50, 1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.3, 0.35, 0.4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gate"]
size = Vector3(6, 4, 2)

[sub_resource type="BoxMesh" id="BoxMesh_pillar"]
size = Vector3(0.5, 4, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_start"]
albedo_color = Color(0.2, 0.7, 0.3, 1)

[sub_resource type="BoxMesh" id="BoxMesh_top"]
size = Vector3(7, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_shop"]
size = Vector3(6, 3, 6)

[sub_resource type="BoxMesh" id="BoxMesh_shop_base"]
size = Vector3(5, 0.3, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bike_shop"]
albedo_color = Color(0.2, 0.4, 0.8, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_upgrade_shop"]
albedo_color = Color(0.7, 0.5, 0.2, 1)

[node name="Hub" type="Node3D"]
script = ExtResource("1_hub")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ground")
surface_material_override/0 = SubResource("StandardMaterial3D_ground")

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -10)

[node name="StartGate" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 15)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StartGate"]
shape = SubResource("BoxShape3D_gate")

[node name="LeftPillar" type="MeshInstance3D" parent="StartGate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("StandardMaterial3D_start")

[node name="RightPillar" type="MeshInstance3D" parent="StartGate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("StandardMaterial3D_start")

[node name="TopBar" type="MeshInstance3D" parent="StartGate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("BoxMesh_top")
surface_material_override/0 = SubResource("StandardMaterial3D_start")

[node name="Label3D" type="Label3D" parent="StartGate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0.5)
text = "START RUN"
font_size = 72

[node name="BikeShopArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BikeShopArea"]
shape = SubResource("BoxShape3D_shop")

[node name="Base" type="MeshInstance3D" parent="BikeShopArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.35, 0)
mesh = SubResource("BoxMesh_shop_base")
surface_material_override/0 = SubResource("StandardMaterial3D_bike_shop")

[node name="Label3D" type="Label3D" parent="BikeShopArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
text = "BIKES"
font_size = 48

[node name="UpgradeShopArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="UpgradeShopArea"]
shape = SubResource("BoxShape3D_shop")

[node name="Base" type="MeshInstance3D" parent="UpgradeShopArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.35, 0)
mesh = SubResource("BoxMesh_shop_base")
surface_material_override/0 = SubResource("StandardMaterial3D_upgrade_shop")

[node name="Label3D" type="Label3D" parent="UpgradeShopArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
text = "UPGRADES"
font_size = 48

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true

[node name="HubUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="HubUI"]
anchors_preset = 0
offset_right = 250.0
offset_bottom = 100.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HubUI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WalletLabel" type="Label" parent="HubUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "WALLET: $0"

[node name="BestStageLabel" type="Label" parent="HubUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "BEST: Stage 0"
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="PromptLabel" type="Label" parent="HubUI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Press E"
horizontal_alignment = 1
